--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,17 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^25.2.3",
     "@vitejs/plugin-vue": "^6.0.4",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
     "vue-tsc": "^3.2.4"
   },
   "dependencies": {
-    "vue": "^3.5.28"
+    "@clerk/vue": "^1.17.13",
+    "pinia": "^3.0.4",
+    "socket.io-client": "^4.8.3",
+    "vue": "^3.5.28",
+    "vue-router": "^5.0.2"
   }
 }
