--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "@babel/runtime": "^7.28.6",
     "@clerk/express": "^1.7.70",
     "@google/generative-ai": "^0.24.1",
-    "@xenova/transformers": "^2.17.2",
+    "@huggingface/transformers": "^3.8.1",
     "better-sqlite3": "^12.6.2",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
