--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
         # Empty = connect to the same origin; nginx proxies /socket.io/ to backend.
         VITE_API_URL: ""
         # Set your Clerk publishable key here (or pass via --build-arg).
-        VITE_CLERK_PUBLISHABLE_KEY: "${VITE_CLERK_PUBLISHABLE_KEY}"
+        VITE_CLERK_PUBLISHABLE_KEY: "pk_test_c3RpbGwtY3JhbmUtNTAuY2xlcmsuYWNjb3VudHMuZGV2JA"
     restart: unless-stopped
     ports:
       - "8090:80"
