--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,17 @@ services:
       # re-downloaded every time the container restarts.
       - hf_model_cache:/root/.cache/huggingface
     healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://localhost:8080/health"]
+      test:
+        [
+          "CMD",
+          "node",
+          "-e",
+          "require('http').get('http://localhost:8080/health', r => process.exit(r.statusCode === 200 ? 0 : 1)).on('error', () => process.exit(1))",
+        ]
       interval: 30s
       timeout: 10s
-      retries: 3
+      retries: 5
+      start_period: 120s # allow extra time for first-run Qwen model download
 
   frontend:
     build:
